<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Project coordinates -->
    <groupId>com.github.RapidEMS</groupId>
    <artifactId>RapidGLD</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!-- Project metadata -->
    <name>RapidGLD</name>
    <description>RapidGLD</description>

    <!-- Dependencies -->
    <dependencies>
        <!-- Add your dependencies here -->
    </dependencies>

    <!-- Build configuration -->
    <build>
        <plugins>
            <!-- Add your build plugins here -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
